Update Conversions service pom - add dependencies Update project ReadMe.md Update RouletteReadMe.md